--- a/src/tests/Stub.am
+++ b/src/tests/Stub.am
@@ -40,7 +40,6 @@ STUB_SOURCE = \
 	tests/stub_client_side.cc \
 	tests/stub_client_side_request.cc \
 	tests/stub_comm.cc \
-	tests/stub_debug.cc \
 	tests/stub_errorpage.cc \
 	tests/stub_event.cc \
 	tests/stub_external_acl.cc \
@@ -59,6 +58,7 @@ STUB_SOURCE = \
 	tests/stub_libauth.cc \
 	tests/stub_libauth_acls.cc \
 	tests/stub_libcomm.cc \
+	tests/stub_libdebug.cc \
 	tests/stub_libdiskio.cc \
 	tests/stub_liberror.cc \
 	tests/stub_libeui.cc \
