revert xpipe, use pipe wrapper instaed

--- a/compat/Makefile.am
+++ b/compat/Makefile.am
@@ -75,8 +75,7 @@ libcompatsquid_la_SOURCES = \
 	xalloc.cc \
 	xalloc.h \
 	xis.h \
-	xpipe.cc \
-	xpipe.h \
+	pipe.h \
 	xstrerror.cc \
 	xstrerror.h \
 	xstring.cc \
