MinGW: Fix aiops_win32.cc (#2030)
Fixed missing includes, type mismatches in some
local variables, applied some AAA;
extracted WIN32_maperror
into own header and implementation files using NoMoreGlobals,
and used modern c++ data types for it.

This change also mirrors changes introduced in aiops.cc by commit
91d1cfb. These changes require further refinement (in both files).

Examples of errors fixed:
```
aiops_win32.cc: In function
    'void* squidaio_xmalloc(int)':
aiops_win32.cc:161:17: error:
    invalid use of incomplete type 'class Mem::Allocator'

aiops_win32.cc: In function 'void squidaio_init()':
aiops_win32.cc:278:19: error:
    comparison of integer expressions of different signedness:
    'int' and 'size_t' {aka 'long long unsigned int'}

aiops_win32.cc: In function
    'void squidaio_do_read(squidaio_request_t*)':
aiops_win32.cc:782:9: error:
    'WIN32_maperror' was not declared in this scope
```

--- a/compat/Makefile.am
+++ b/compat/Makefile.am
@@ -73,6 +73,8 @@ libcompatsquid_la_SOURCES = \
 	tempnam.h \
 	types.h \
 	valgrind.h \
+	win32_maperror.cc \
+	win32_maperror.h \
 	xalloc.cc \
 	xalloc.h \
 	xis.h \
