Add Instance API stub
... instead of adding Instance.cc that drags other unwanted dependencies
to tests.

Most likely, other unwanted test dependencies drag Instance functions
onto the dependency list in many cases, but fixing those preexisting
problems is outside this branch scope. For now, we just want to avoid
compounding those preexisting problems with new Instance dependencies.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1051,6 +1051,7 @@ tests_testRock_SOURCES = \
 	HttpHeaderTools.h \
 	HttpReply.cc \
 	tests/stub_HttpRequest.cc \
+	tests/stub_Instance.cc \
 	LogTags.cc \
 	MasterXaction.cc \
 	MasterXaction.h \
@@ -1142,7 +1143,6 @@ tests_testRock_SOURCES = \
 	wordlist.h
 nodist_tests_testRock_SOURCES = \
 	$(TESTSOURCES) \
-	Instance.cc \
 	SquidMath.cc \
 	SquidMath.h \
 	hier_code.cc \
@@ -1222,6 +1222,7 @@ tests_testUfs_SOURCES = \
 	HttpHeaderTools.h \
 	HttpReply.cc \
 	tests/stub_HttpRequest.cc \
+	tests/stub_Instance.cc \
 	LogTags.cc \
 	MasterXaction.cc \
 	MasterXaction.h \
@@ -1316,7 +1317,6 @@ tests_testUfs_SOURCES = \
 	wordlist.h
 nodist_tests_testUfs_SOURCES = \
 	$(TESTSOURCES) \
-	Instance.cc \
 	SquidMath.cc \
 	SquidMath.h \
 	hier_code.cc \
@@ -1395,6 +1395,7 @@ tests_testStore_SOURCES = \
 	HttpHeaderTools.h \
 	tests/stub_HttpReply.cc \
 	tests/stub_HttpRequest.cc \
+	tests/stub_Instance.cc \
 	MasterXaction.cc \
 	MasterXaction.h \
 	MemBuf.cc \
@@ -1486,7 +1487,6 @@ tests_testStore_SOURCES = \
 	wordlist.h
 nodist_tests_testStore_SOURCES = \
 	$(TESTSOURCES) \
-	Instance.cc \
 	SquidMath.cc \
 	SquidMath.h \
 	tests/stub_libtime.cc \
@@ -1559,6 +1559,7 @@ tests_testDiskIO_SOURCES = \
 	HttpHeaderTools.h \
 	HttpReply.cc \
 	tests/stub_HttpRequest.cc \
+	tests/stub_Instance.cc \
 	LogTags.cc \
 	MasterXaction.cc \
 	MasterXaction.h \
@@ -1657,7 +1658,6 @@ tests_testDiskIO_SOURCES = \
 	wordlist.h
 nodist_tests_testDiskIO_SOURCES = \
 	$(TESTSOURCES) \
-	Instance.cc \
 	SquidMath.cc \
 	SquidMath.h \
 	hier_code.cc \
@@ -1823,6 +1823,7 @@ tests_testHttpRange_SOURCES = \
 	HttpReply.cc \
 	HttpRequest.cc \
 	tests/stub_HttpUpgradeProtocolAccess.cc \
+	tests/stub_Instance.cc \
 	IoStats.h \
 	tests/stub_IpcIoFile.cc \
 	LogTags.cc \
@@ -1956,7 +1957,6 @@ tests_testHttpRange_SOURCES = \
 	wordlist.h
 nodist_tests_testHttpRange_SOURCES = \
 	$(BUILT_SOURCES) \
-	Instance.cc \
 	tests/stub_libtime.cc
 tests_testHttpRange_LDADD = \
 	libsquid.la \
@@ -2084,6 +2084,7 @@ tests_testHttpReply_SOURCES = \
 	tests/testHttpReply.cc \
 	HttpReply.h \
 	tests/stub_HttpRequest.cc \
+	tests/stub_Instance.cc \
 	MasterXaction.cc \
 	MasterXaction.h \
 	MemBuf.cc \
@@ -2134,8 +2135,6 @@ tests_testHttpReply_SOURCES = \
 	wordlist.h
 nodist_tests_testHttpReply_SOURCES = \
 	$(TESTSOURCES) \
-	Instance.cc \
-	fs_io.cc \
 	hier_code.cc \
 	tests/stub_libtime.cc
 tests_testHttpReply_LDADD=\
@@ -2213,6 +2212,7 @@ tests_testHttpRequest_SOURCES = \
 	tests/testHttpRequest.cc \
 	tests/testHttpRequestMethod.cc \
 	tests/stub_HttpUpgradeProtocolAccess.cc \
+	tests/stub_Instance.cc \
 	IoStats.h \
 	tests/stub_IpcIoFile.cc \
 	LogTags.cc \
@@ -2346,7 +2346,6 @@ tests_testHttpRequest_SOURCES = \
 	wordlist.h
 nodist_tests_testHttpRequest_SOURCES = \
 	$(BUILT_SOURCES) \
-	Instance.cc \
 	tests/stub_libtime.cc
 tests_testHttpRequest_LDADD = \
 	libsquid.la \
@@ -2511,6 +2510,7 @@ tests_testCacheManager_SOURCES = \
 	HttpReply.cc \
 	HttpRequest.cc \
 	tests/stub_HttpUpgradeProtocolAccess.cc \
+	tests/stub_Instance.cc \
 	IoStats.h \
 	tests/stub_IpcIoFile.cc \
 	LogTags.cc \
@@ -2641,8 +2641,7 @@ tests_testCacheManager_SOURCES = \
 	wordlist.cc \
 	wordlist.h
 nodist_tests_testCacheManager_SOURCES = \
-	$(BUILT_SOURCES) \
-	Instance.cc
+	$(BUILT_SOURCES)
 # comm.cc only requires comm/libcomm.la until fdc_table is dead.
 tests_testCacheManager_LDADD = \
 	libsquid.la \
