--- a/compat/Makefile.am
+++ b/compat/Makefile.am
@@ -45,6 +45,8 @@ libcompatsquid_la_SOURCES = \
 	memrchr.cc \
 	memrchr.h \
 	mswindows.cc \
+	netdb.cc \
+	netdb.h \
 	os/aix.h \
 	os/android.h \
 	os/dragonfly.h \
@@ -74,6 +76,8 @@ libcompatsquid_la_SOURCES = \
 	strtoll.h \
 	tempnam.h \
 	types.h \
+	unistd.cc \
+	unistd.h \
 	valgrind.h \
 	win32_maperror.cc \
 	win32_maperror.h \
