CI: Pin OpenBSD 7.6
OpenBSD 7.7 introduces some changes that fail our build.
Pin version 7.6 while we work on version 7.7 adoption.

--- a/.github/workflows/slow.yaml
+++ b/.github/workflows/slow.yaml
@@ -197,6 +197,7 @@ jobs:
         uses: vmactions/openbsd-vm@v1
         with:
           usesh: true
+          release: "7.6"
           prepare: |
             pkg_add \
               autoconf-2.72p0 \
