fixup: GitHub Ubuntu v24.04 runners lack libltdl-dev
Ubuntu v22.04 used to have that installed, as detailed at
https://github.com/actions/runner-images/issues/11316

According to the same issue, GitHub have just added libltdl-dev to
v24.04, but older/existing runners still fail:

    libtoolize:   error: '/usr/share/aclocal/ltdl.m4' does not exist.

--- a/.github/workflows/quick.yaml
+++ b/.github/workflows/quick.yaml
@@ -46,7 +46,7 @@ jobs:
       - name: Install prerequisite packages
         run: |
           sudo apt-get --quiet=2 update
-          sudo apt-get --quiet=2 install libtool-bin
+          sudo apt-get --quiet=2 install libtool-bin libltdl-dev
 
       - name: Setup a nodejs environment
         uses: actions/setup-node@v4
