WIP: And study /etc/hosts that are still broken!

--- a/.github/workflows/quick.yaml
+++ b/.github/workflows/quick.yaml
@@ -43,6 +43,8 @@ jobs:
     runs-on: ubuntu-24.04
 
     steps:
+      - run: cat /etc/hosts
+
       - name: Install prerequisite packages
         run: |
           sudo apt-get --quiet=2 update
