--- a/.github/workflows/quick.yaml
+++ b/.github/workflows/quick.yaml
@@ -48,7 +48,7 @@ jobs:
       - run: |
           cat /etc/hosts
           cp -p /etc/hosts /tmp/etc-hosts.bak
-          sudo sed --in-place -E 's/^-e.*/# \1/' /etc/hosts
+          sudo sed --in-place -E 's/^(-e.*)/# \1/' /etc/hosts
           diff -u /tmp/etc-hosts.bak /etc/hosts.bak
 
       - name: Install prerequisite packages
@@ -179,7 +179,7 @@ jobs:
           cat /etc/apt/sources.list.d/ubuntu.sources
           cp -pi /etc/apt/sources.list.d/ubuntu.sources /tmp/tus
           # required for "apt-get build-dep" to work
-          sudo sed --in-place -E 's/^Types: deb$/\1 deb-src/' /etc/apt/sources.list.d/ubuntu.sources
+          sudo sed --in-place -E 's/^(Types: deb)$/\1 deb-src/' /etc/apt/sources.list.d/ubuntu.sources
           diff -u /tmp/tus /etc/apt/sources.list.d/ubuntu.sources
           sudo apt-get --quiet=2 update
           sudo apt-get --quiet=2 build-dep squid
