fixup: Update one more "Install ... prerequisite Linux packages" step

--- a/.github/workflows/quick.yaml
+++ b/.github/workflows/quick.yaml
@@ -140,8 +140,10 @@ jobs:
 
       - name: Install prerequisite Linux packages
         run: |
+          cp -p /etc/apt/sources.list.d/ubuntu.sources /tmp/ubuntu.sources.bak
           # required for "apt-get build-dep" to work
-          sudo sed --in-place -E 's/# (deb-src.*updates main)/  \1/g' /etc/apt/sources.list
+          sudo sed --in-place -E 's/^(Types: deb)$/\1 deb-src/' /etc/apt/sources.list.d/ubuntu.sources
+          diff -u /tmp/ubuntu.sources.bak /etc/apt/sources.list.d/ubuntu.sources || true
           sudo apt-get --quiet=2 update
           sudo apt-get --quiet=2 build-dep squid
           sudo apt-get --quiet=2 install linuxdoc-tools libtool-bin ${{ matrix.compiler.CC }} ccache valgrind
@@ -174,13 +176,12 @@ jobs:
 
     steps:
 
-      - name: Install Squid prerequisite Linux packages
+      - name: Install prerequisite Linux packages
         run: |
-          cat /etc/apt/sources.list.d/ubuntu.sources
-          cp -pi /etc/apt/sources.list.d/ubuntu.sources /tmp/tus
+          cp -p /etc/apt/sources.list.d/ubuntu.sources /tmp/ubuntu.sources.bak
           # required for "apt-get build-dep" to work
           sudo sed --in-place -E 's/^(Types: deb)$/\1 deb-src/' /etc/apt/sources.list.d/ubuntu.sources
-          diff -u /tmp/tus /etc/apt/sources.list.d/ubuntu.sources || true
+          diff -u /tmp/ubuntu.sources.bak /etc/apt/sources.list.d/ubuntu.sources || true
           sudo apt-get --quiet=2 update
           sudo apt-get --quiet=2 build-dep squid
           sudo apt-get --quiet=2 install linuxdoc-tools libtool-bin
