--- a/.github/workflows/slow.yaml
+++ b/.github/workflows/slow.yaml
@@ -14,6 +14,10 @@ on:
   push:
     branches: [ "auto" ]
 
+  # GitHub merge queue
+  merge_group:
+    branches: [ "master", "v7" ]
+
   # allows to run this workflow manually from the Actions tab
   workflow_dispatch:
 
