Wrap headers in test
Co-authored-by: Amos Jeffries <yadij@users.noreply.github.com>

--- a/configure.ac
+++ b/configure.ac
@@ -989,8 +989,12 @@ include <windows.h>
 #endif
   ]])
   AC_CHECK_MEMBER([struct arpreq.arp_pa],,,[
+#if HAVE_SYS_TYPES_H
 #include <sys/types.h>
+#endif
+#if HAVE_SYS_SOCKET_H
 #include <sys/socket.h>
+#endif
 #if HAVE_NET_IF_ARP_H
 #include <net/if_arp.h>
 #endif
