do not explicitly add /usr/local/share/aclocal to ACLOCAL_PATH

--- a/.github/workflows/slow.yaml
+++ b/.github/workflows/slow.yaml
@@ -224,7 +224,7 @@ jobs:
             export pjobs="-j`gnproc`"
             export AUTOMAKE_VERSION=`ls /usr/local/bin/automake-* | sed 's/.*-//'`
             export ACLOCAL_AUTOMAKE_DIR="/usr/local/share/aclocal-${AUTOMAKE_VERSION}"
-            export ACLOCAL_PATH="/usr/local/share/aclocal:/usr/local/share/aclocal-${AUTOMAKE_VERSION}"
+            export ACLOCAL_PATH="/usr/local/share/aclocal-${AUTOMAKE_VERSION}"
             export AUTOCONF_VERSION=`ls /usr/local/bin/autoconf-* | sed 's/.*-//'`
             export CFLAGS='-Wno-compound-token-split-by-macro'
             export LDFLAGS="-L/usr/local/lib"
