--- a/.github/workflows/review.yaml
+++ b/.github/workflows/review.yaml
@@ -54,7 +54,7 @@ jobs:
         run: |
           test `gh pr view ${{ github.event.pull_request.number }} --json author,latestReviews \
             --template '{{.author.login}} APPROVED {{range .latestReviews}}{{.author.login}} {{.state}} {{end}}' |
-            grep -E "(kinkie|rousskov|yadij) APPROVED" | wc -l` -eq 3
+            grep -o -E "(kinkie|rousskov|yadij) APPROVED" | wc -l` -eq 3
 
       - name: Hold 48 hours for review
         # Squid Project grants a delay to allow review a chance to veto new additions.
@@ -75,7 +75,7 @@ jobs:
         run: |
           test `gh pr view ${{ github.event.pull_request.number }} --json author,latestReviews \
             --template '{{.author.login}} APPROVED {{range .latestReviews}}{{.author.login}} {{.state}} {{end}}' |
-            grep -E "(kinkie|rousskov|yadij) APPROVED" | wc -l` -eq 2
+            grep -o -E "(kinkie|rousskov|yadij) APPROVED" | wc -l` -eq 2
 
       - name: Any 3 Positive Reviews
         # Any three positive votes accept the submission.
@@ -85,7 +85,7 @@ jobs:
         run: |
           test `gh pr view ${{ github.event.pull_request.number }} --json author,latestReviews \
             --template '{{.author.login}} APPROVED {{range .latestReviews}}{{.author.login}} {{.state}} {{end}}' |
-            grep -E "APPROVED" | wc -l` -eq 3
+            grep -o -E "APPROVED" | wc -l` -eq 3
 
       - name: Aged 10 days without negative reviews
         # Submissions older than 10 days without negative votes are accepted.
