--- a/.github/workflows/slow.yaml
+++ b/.github/workflows/slow.yaml
@@ -20,12 +20,13 @@ jobs:
     strategy:
       matrix:
         os:
+          - centos-stream-10
           - centos-stream-9
           - debian-stable
           - debian-testing
           - debian-unstable
-          - fedora-40
           - fedora-41
+          - fedora-42
           - fedora-rawhide
           - gentoo
           - opensuse-leap
@@ -34,6 +35,7 @@ jobs:
           - ubuntu-jammy
           - ubuntu-noble # EOL 2036-04
           - ubuntu-oracular # EOL 2025-07
+          - ubuntu-plucky
         compiler:
           - { CC: gcc, CXX: g++ }
           - { CC: clang, CXX: clang++ }
