Update digest_nonce_h to use MEMPROXY_CLASS

--- a/src/auth/digest/Makefile.am
+++ b/src/auth/digest/Makefile.am
@@ -20,9 +20,11 @@ noinst_LTLIBRARIES= libdigest.la
 libdigest_la_SOURCES = \
 	Config.cc \
 	Config.h \
+	Nonce.h \
 	Scheme.cc \
 	Scheme.h \
 	User.cc \
 	User.h \
 	UserRequest.cc \
-	UserRequest.h
+	UserRequest.h \
+	forward.h
