--- a/doc/release-notes/release-8.sgml.in
+++ b/doc/release-notes/release-8.sgml.in
@@ -30,7 +30,7 @@ The Squid-@SQUID_RELEASE@ change history can be <url url="https://github.com/squ
 
 <p>The most important of these new features are:
 <itemize>
-	<item>Remove ASN support
+	<item>Remove support for src_as and dst_as ACLs
 </itemize>
 
 <sect1>Helper changes
@@ -48,14 +48,17 @@ The Squid-@SQUID_RELEASE@ change history can be <url url="https://github.com/squ
 
 </descrip>
 
-<sect1>Removed ASN support
+<sect1>Remove support for src_as and dst_as ACLs
 
-<p>ASN startup code is broken in configurations that require cache_peer when
-connecting to ASN server. ASN-based ACLs are considered to be essentially unused
-and can be replaced with more flexible external ACLs.
+<p>Based on admins feedback and a history of fatal implementation bugs that
+went unnoticed for a long time, the two ACLs are considered to be essentially
+unused. The corresponding Autonomous System Numbers (ASN) lookups can be
+implemented (with more features) using external ACLs. Removing ASN lookup ACLs
+also removes ancient and neglected C code implementing Radix tree algorithms,
+improving Squid security posture and simplifying development.
 
-<p>Configurations using src_as and dst_as are now rejected, leading to fatal startup
-failures.
+<p>Configurations using src_as or dst_as ACL types are now rejected with FATAL
+errors.
 
 Most user-facing changes are reflected in squid.conf (see below).
 
