Enhance and use POSIX socket compatibility layer (#2046)
Implement portable wrappers around most socket-related functions, named
x[function], and use them in all callsites.

winsock's socket-related functions are very similar but not
identical to the POSIX standard. Make the mswindows
compatibility layer available to MinGW, and modernize it.

Error highlighting the issue:
```
TcpAcceptor.cc: In member function
  'bool Comm::TcpAcceptor::acceptInto(Comm::ConnectionPointer&)':
TcpAcceptor.cc:352:17: error:
  comparison of unsigned expression in '< 0'
  is always false [-Werror=type-limits]
  352 |     if (rawSock < 0) {
```

--- a/compat/Makefile.am
+++ b/compat/Makefile.am
@@ -45,6 +45,8 @@ libcompatsquid_la_SOURCES = \
 	memrchr.cc \
 	memrchr.h \
 	mswindows.cc \
+	netdb.cc \
+	netdb.h \
 	os/aix.h \
 	os/android.h \
 	os/dragonfly.h \
@@ -63,8 +65,12 @@ libcompatsquid_la_SOURCES = \
 	os/sunos.h \
 	osdetect.h \
 	pipe.h \
+	select.cc \
+	select.h \
 	shm.cc \
 	shm.h \
+	socket.cc \
+	socket.h \
 	statvfs.cc \
 	statvfs.h \
 	stdio.h \
@@ -72,9 +78,13 @@ libcompatsquid_la_SOURCES = \
 	strtoll.h \
 	tempnam.h \
 	types.h \
+	unistd.cc \
+	unistd.h \
 	valgrind.h \
 	win32_maperror.cc \
 	win32_maperror.h \
+	wserrno.cc \
+	wserrno.h \
 	xalloc.cc \
 	xalloc.h \
 	xis.h \
